Fix bug: sticky on safari

--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,7 @@ body {
 }
 
 .modal-close-view-category {
+  position: -webkit-sticky; /* Safari */ 
   position: sticky;
   left: 98%;
 }
